[gd_scene load_steps=4 format=2]

[ext_resource path="res://rooms/cyberspace/common/trap_door/TrapDoor.gd" type="Script" id=1]
[ext_resource path="res://rooms/cyberspace/common/tile/Tile.tscn" type="PackedScene" id=2]



[sub_resource type="Animation" id=1]
resource_name = "open"
length = 0.5
tracks/0/type = "value"
tracks/0/path = NodePath("LeftHinge:rotation_degrees")
tracks/0/interp = 1
tracks/0/loop_wrap = true
tracks/0/imported = false
tracks/0/enabled = true
tracks/0/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, -90 ) ]
}
tracks/1/type = "value"
tracks/1/path = NodePath("RightHinge:rotation_degrees")
tracks/1/interp = 1
tracks/1/loop_wrap = true
tracks/1/imported = false
tracks/1/enabled = true
tracks/1/keys = {
"times": PoolRealArray( 0, 0.5 ),
"transitions": PoolRealArray( 1, 1 ),
"update": 0,
"values": [ Vector3( 0, 0, 0 ), Vector3( 0, 0, 90 ) ]
}

[node name="TrapDoor" type="Spatial"]
script = ExtResource( 1 )

[node name="AnimationPlayer" type="AnimationPlayer" parent="."]
anims/open = SubResource( 1 )

[node name="LeftHinge" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -6, 0, 0 )

[node name="LeftFlap" parent="LeftHinge" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 3, 0, 0 )

[node name="RightHinge" type="Spatial" parent="."]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, 6, 0, 0 )

[node name="RightFlap" parent="RightHinge" instance=ExtResource( 2 )]
transform = Transform( 1, 0, 0, 0, 1, 0, 0, 0, 1, -3, 0, 0 )
